Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1160,9 +1160,10 @@
     }
    ],
    "source": [
+    "name\n",
     "for city in city_names:\n",
     "    i = 1\n",
-    "    names_and_ranks"
+    "    names_and_ranks[]"
    ]
   },
   {
