--- a/index.ipynb
+++ b/index.ipynb
@@ -1163,7 +1163,7 @@
     "names_and_ranks = []\n",
     "for city in city_names:\n",
     "    i = 1\n",
-    "    names_and_ranks[]"
+    "    names_and_ranks[i]"
    ]
   },
   {
