--- a/index.ipynb
+++ b/index.ipynb
@@ -1151,7 +1151,8 @@
     "names_and_ranks = []\n",
     "for city in city_names:\n",
     "    i = 1\n",
-    "    names_and_ranks.append(str(i) + city)"
+    "    names_and_ranks.append(str(i) + city)\n",
+    "names_and_ranks"
    ]
   },
   {
