Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1144,14 +1144,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['1Buenos Aires',\n",
+       " '1Toronto',\n",
+       " '1Marakesh',\n",
+       " '1Albuquerque',\n",
+       " '1Los Cabos',\n",
+       " '1Greenville',\n",
+       " '1Archipelago Sea',\n",
+       " '1Pyeongchang',\n",
+       " '1Walla Walla Valley',\n",
+       " '1Salina Island',\n",
+       " '1Solta',\n",
+       " '1Iguazu Falls']"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "names_and_ranks = []\n",
     "for city in city_names:\n",
     "    i = 1\n",
     "    names_and_ranks.append(str(i) + city)\n",
+    "    \n",
     "names_and_ranks"
    ]
   },
