Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1144,29 +1144,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['1Buenos Aires',\n",
-       " '1Toronto',\n",
-       " '1Marakesh',\n",
-       " '1Albuquerque',\n",
-       " '1Los Cabos',\n",
-       " '1Greenville',\n",
-       " '1Archipelago Sea',\n",
-       " '1Pyeongchang',\n",
-       " '1Walla Walla Valley',\n",
-       " '1Salina Island',\n",
-       " '1Solta',\n",
-       " '1Iguazu Falls']"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-9-90a198eda4e2>, line 5)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-9-90a198eda4e2>\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    i++\u001b[0m\n\u001b[0m       ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
     }
    ],
    "source": [
@@ -1174,7 +1161,7 @@
     "for city in city_names:\n",
     "    i = 1\n",
     "    names_and_ranks.append(str(i) + city)\n",
-    "    \n",
+    "    i++\n",
     "names_and_ranks"
    ]
   },
