--- a/index.ipynb
+++ b/index.ipynb
@@ -1159,7 +1159,7 @@
    "source": [
     "names_and_ranks = []\n",
     "for city in city_names:\n",
-    "    i = 1\n",
+    "    for i in range(0, names_and): \n",
     "    names_and_ranks.append(str(i) + city)\n",
     "    i++\n",
     "names_and_ranks"
