--- a/index.ipynb
+++ b/index.ipynb
@@ -1144,25 +1144,167 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'list' object has no attribute 'len'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-11-96ba27b0c03e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mnames_and_ranks\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mcity\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mcity_names\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m     \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcity_names\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m         \u001b[0mnames_and_ranks\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mcity\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mnames_and_ranks\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'list' object has no attribute 'len'"
-     ]
+     "data": {
+      "text/plain": [
+       "['0Buenos Aires',\n",
+       " '1Buenos Aires',\n",
+       " '2Buenos Aires',\n",
+       " '3Buenos Aires',\n",
+       " '4Buenos Aires',\n",
+       " '5Buenos Aires',\n",
+       " '6Buenos Aires',\n",
+       " '7Buenos Aires',\n",
+       " '8Buenos Aires',\n",
+       " '9Buenos Aires',\n",
+       " '10Buenos Aires',\n",
+       " '11Buenos Aires',\n",
+       " '0Toronto',\n",
+       " '1Toronto',\n",
+       " '2Toronto',\n",
+       " '3Toronto',\n",
+       " '4Toronto',\n",
+       " '5Toronto',\n",
+       " '6Toronto',\n",
+       " '7Toronto',\n",
+       " '8Toronto',\n",
+       " '9Toronto',\n",
+       " '10Toronto',\n",
+       " '11Toronto',\n",
+       " '0Marakesh',\n",
+       " '1Marakesh',\n",
+       " '2Marakesh',\n",
+       " '3Marakesh',\n",
+       " '4Marakesh',\n",
+       " '5Marakesh',\n",
+       " '6Marakesh',\n",
+       " '7Marakesh',\n",
+       " '8Marakesh',\n",
+       " '9Marakesh',\n",
+       " '10Marakesh',\n",
+       " '11Marakesh',\n",
+       " '0Albuquerque',\n",
+       " '1Albuquerque',\n",
+       " '2Albuquerque',\n",
+       " '3Albuquerque',\n",
+       " '4Albuquerque',\n",
+       " '5Albuquerque',\n",
+       " '6Albuquerque',\n",
+       " '7Albuquerque',\n",
+       " '8Albuquerque',\n",
+       " '9Albuquerque',\n",
+       " '10Albuquerque',\n",
+       " '11Albuquerque',\n",
+       " '0Los Cabos',\n",
+       " '1Los Cabos',\n",
+       " '2Los Cabos',\n",
+       " '3Los Cabos',\n",
+       " '4Los Cabos',\n",
+       " '5Los Cabos',\n",
+       " '6Los Cabos',\n",
+       " '7Los Cabos',\n",
+       " '8Los Cabos',\n",
+       " '9Los Cabos',\n",
+       " '10Los Cabos',\n",
+       " '11Los Cabos',\n",
+       " '0Greenville',\n",
+       " '1Greenville',\n",
+       " '2Greenville',\n",
+       " '3Greenville',\n",
+       " '4Greenville',\n",
+       " '5Greenville',\n",
+       " '6Greenville',\n",
+       " '7Greenville',\n",
+       " '8Greenville',\n",
+       " '9Greenville',\n",
+       " '10Greenville',\n",
+       " '11Greenville',\n",
+       " '0Archipelago Sea',\n",
+       " '1Archipelago Sea',\n",
+       " '2Archipelago Sea',\n",
+       " '3Archipelago Sea',\n",
+       " '4Archipelago Sea',\n",
+       " '5Archipelago Sea',\n",
+       " '6Archipelago Sea',\n",
+       " '7Archipelago Sea',\n",
+       " '8Archipelago Sea',\n",
+       " '9Archipelago Sea',\n",
+       " '10Archipelago Sea',\n",
+       " '11Archipelago Sea',\n",
+       " '0Pyeongchang',\n",
+       " '1Pyeongchang',\n",
+       " '2Pyeongchang',\n",
+       " '3Pyeongchang',\n",
+       " '4Pyeongchang',\n",
+       " '5Pyeongchang',\n",
+       " '6Pyeongchang',\n",
+       " '7Pyeongchang',\n",
+       " '8Pyeongchang',\n",
+       " '9Pyeongchang',\n",
+       " '10Pyeongchang',\n",
+       " '11Pyeongchang',\n",
+       " '0Walla Walla Valley',\n",
+       " '1Walla Walla Valley',\n",
+       " '2Walla Walla Valley',\n",
+       " '3Walla Walla Valley',\n",
+       " '4Walla Walla Valley',\n",
+       " '5Walla Walla Valley',\n",
+       " '6Walla Walla Valley',\n",
+       " '7Walla Walla Valley',\n",
+       " '8Walla Walla Valley',\n",
+       " '9Walla Walla Valley',\n",
+       " '10Walla Walla Valley',\n",
+       " '11Walla Walla Valley',\n",
+       " '0Salina Island',\n",
+       " '1Salina Island',\n",
+       " '2Salina Island',\n",
+       " '3Salina Island',\n",
+       " '4Salina Island',\n",
+       " '5Salina Island',\n",
+       " '6Salina Island',\n",
+       " '7Salina Island',\n",
+       " '8Salina Island',\n",
+       " '9Salina Island',\n",
+       " '10Salina Island',\n",
+       " '11Salina Island',\n",
+       " '0Solta',\n",
+       " '1Solta',\n",
+       " '2Solta',\n",
+       " '3Solta',\n",
+       " '4Solta',\n",
+       " '5Solta',\n",
+       " '6Solta',\n",
+       " '7Solta',\n",
+       " '8Solta',\n",
+       " '9Solta',\n",
+       " '10Solta',\n",
+       " '11Solta',\n",
+       " '0Iguazu Falls',\n",
+       " '1Iguazu Falls',\n",
+       " '2Iguazu Falls',\n",
+       " '3Iguazu Falls',\n",
+       " '4Iguazu Falls',\n",
+       " '5Iguazu Falls',\n",
+       " '6Iguazu Falls',\n",
+       " '7Iguazu Falls',\n",
+       " '8Iguazu Falls',\n",
+       " '9Iguazu Falls',\n",
+       " '10Iguazu Falls',\n",
+       " '11Iguazu Falls']"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "names_and_ranks = []\n",
     "for city in city_names:\n",
-    "    for i in range(0, len(city_names): \n",
+    "    for i in range(0, len(city_names)): \n",
     "        names_and_ranks.append(str(i) + city)\n",
     "names_and_ranks"
    ]
