Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1144,147 +1144,147 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['1Buenos Aires',\n",
-       " '2Buenos Aires',\n",
-       " '3Buenos Aires',\n",
-       " '4Buenos Aires',\n",
-       " '5Buenos Aires',\n",
-       " '6Buenos Aires',\n",
-       " '7Buenos Aires',\n",
-       " '8Buenos Aires',\n",
-       " '9Buenos Aires',\n",
-       " '10Buenos Aires',\n",
-       " '11Buenos Aires',\n",
-       " '1Toronto',\n",
-       " '2Toronto',\n",
-       " '3Toronto',\n",
-       " '4Toronto',\n",
-       " '5Toronto',\n",
-       " '6Toronto',\n",
-       " '7Toronto',\n",
-       " '8Toronto',\n",
-       " '9Toronto',\n",
-       " '10Toronto',\n",
-       " '11Toronto',\n",
-       " '1Marakesh',\n",
-       " '2Marakesh',\n",
-       " '3Marakesh',\n",
-       " '4Marakesh',\n",
-       " '5Marakesh',\n",
-       " '6Marakesh',\n",
-       " '7Marakesh',\n",
-       " '8Marakesh',\n",
-       " '9Marakesh',\n",
-       " '10Marakesh',\n",
-       " '11Marakesh',\n",
-       " '1Albuquerque',\n",
-       " '2Albuquerque',\n",
-       " '3Albuquerque',\n",
-       " '4Albuquerque',\n",
-       " '5Albuquerque',\n",
-       " '6Albuquerque',\n",
-       " '7Albuquerque',\n",
-       " '8Albuquerque',\n",
-       " '9Albuquerque',\n",
-       " '10Albuquerque',\n",
-       " '11Albuquerque',\n",
-       " '1Los Cabos',\n",
-       " '2Los Cabos',\n",
-       " '3Los Cabos',\n",
-       " '4Los Cabos',\n",
-       " '5Los Cabos',\n",
-       " '6Los Cabos',\n",
-       " '7Los Cabos',\n",
-       " '8Los Cabos',\n",
-       " '9Los Cabos',\n",
-       " '10Los Cabos',\n",
-       " '11Los Cabos',\n",
-       " '1Greenville',\n",
-       " '2Greenville',\n",
-       " '3Greenville',\n",
-       " '4Greenville',\n",
-       " '5Greenville',\n",
-       " '6Greenville',\n",
-       " '7Greenville',\n",
-       " '8Greenville',\n",
-       " '9Greenville',\n",
-       " '10Greenville',\n",
-       " '11Greenville',\n",
-       " '1Archipelago Sea',\n",
-       " '2Archipelago Sea',\n",
-       " '3Archipelago Sea',\n",
-       " '4Archipelago Sea',\n",
-       " '5Archipelago Sea',\n",
-       " '6Archipelago Sea',\n",
-       " '7Archipelago Sea',\n",
-       " '8Archipelago Sea',\n",
-       " '9Archipelago Sea',\n",
-       " '10Archipelago Sea',\n",
-       " '11Archipelago Sea',\n",
-       " '1Pyeongchang',\n",
-       " '2Pyeongchang',\n",
-       " '3Pyeongchang',\n",
-       " '4Pyeongchang',\n",
-       " '5Pyeongchang',\n",
-       " '6Pyeongchang',\n",
-       " '7Pyeongchang',\n",
-       " '8Pyeongchang',\n",
-       " '9Pyeongchang',\n",
-       " '10Pyeongchang',\n",
-       " '11Pyeongchang',\n",
-       " '1Walla Walla Valley',\n",
-       " '2Walla Walla Valley',\n",
-       " '3Walla Walla Valley',\n",
-       " '4Walla Walla Valley',\n",
-       " '5Walla Walla Valley',\n",
-       " '6Walla Walla Valley',\n",
-       " '7Walla Walla Valley',\n",
-       " '8Walla Walla Valley',\n",
-       " '9Walla Walla Valley',\n",
-       " '10Walla Walla Valley',\n",
-       " '11Walla Walla Valley',\n",
-       " '1Salina Island',\n",
-       " '2Salina Island',\n",
-       " '3Salina Island',\n",
-       " '4Salina Island',\n",
-       " '5Salina Island',\n",
-       " '6Salina Island',\n",
-       " '7Salina Island',\n",
-       " '8Salina Island',\n",
-       " '9Salina Island',\n",
-       " '10Salina Island',\n",
-       " '11Salina Island',\n",
-       " '1Solta',\n",
-       " '2Solta',\n",
-       " '3Solta',\n",
-       " '4Solta',\n",
-       " '5Solta',\n",
-       " '6Solta',\n",
-       " '7Solta',\n",
-       " '8Solta',\n",
-       " '9Solta',\n",
-       " '10Solta',\n",
-       " '11Solta',\n",
-       " '1Iguazu Falls',\n",
-       " '2Iguazu Falls',\n",
-       " '3Iguazu Falls',\n",
-       " '4Iguazu Falls',\n",
-       " '5Iguazu Falls',\n",
-       " '6Iguazu Falls',\n",
-       " '7Iguazu Falls',\n",
-       " '8Iguazu Falls',\n",
-       " '9Iguazu Falls',\n",
-       " '10Iguazu Falls',\n",
-       " '11Iguazu Falls']"
+       "['1 Buenos Aires',\n",
+       " '2 Buenos Aires',\n",
+       " '3 Buenos Aires',\n",
+       " '4 Buenos Aires',\n",
+       " '5 Buenos Aires',\n",
+       " '6 Buenos Aires',\n",
+       " '7 Buenos Aires',\n",
+       " '8 Buenos Aires',\n",
+       " '9 Buenos Aires',\n",
+       " '10 Buenos Aires',\n",
+       " '11 Buenos Aires',\n",
+       " '1 Toronto',\n",
+       " '2 Toronto',\n",
+       " '3 Toronto',\n",
+       " '4 Toronto',\n",
+       " '5 Toronto',\n",
+       " '6 Toronto',\n",
+       " '7 Toronto',\n",
+       " '8 Toronto',\n",
+       " '9 Toronto',\n",
+       " '10 Toronto',\n",
+       " '11 Toronto',\n",
+       " '1 Marakesh',\n",
+       " '2 Marakesh',\n",
+       " '3 Marakesh',\n",
+       " '4 Marakesh',\n",
+       " '5 Marakesh',\n",
+       " '6 Marakesh',\n",
+       " '7 Marakesh',\n",
+       " '8 Marakesh',\n",
+       " '9 Marakesh',\n",
+       " '10 Marakesh',\n",
+       " '11 Marakesh',\n",
+       " '1 Albuquerque',\n",
+       " '2 Albuquerque',\n",
+       " '3 Albuquerque',\n",
+       " '4 Albuquerque',\n",
+       " '5 Albuquerque',\n",
+       " '6 Albuquerque',\n",
+       " '7 Albuquerque',\n",
+       " '8 Albuquerque',\n",
+       " '9 Albuquerque',\n",
+       " '10 Albuquerque',\n",
+       " '11 Albuquerque',\n",
+       " '1 Los Cabos',\n",
+       " '2 Los Cabos',\n",
+       " '3 Los Cabos',\n",
+       " '4 Los Cabos',\n",
+       " '5 Los Cabos',\n",
+       " '6 Los Cabos',\n",
+       " '7 Los Cabos',\n",
+       " '8 Los Cabos',\n",
+       " '9 Los Cabos',\n",
+       " '10 Los Cabos',\n",
+       " '11 Los Cabos',\n",
+       " '1 Greenville',\n",
+       " '2 Greenville',\n",
+       " '3 Greenville',\n",
+       " '4 Greenville',\n",
+       " '5 Greenville',\n",
+       " '6 Greenville',\n",
+       " '7 Greenville',\n",
+       " '8 Greenville',\n",
+       " '9 Greenville',\n",
+       " '10 Greenville',\n",
+       " '11 Greenville',\n",
+       " '1 Archipelago Sea',\n",
+       " '2 Archipelago Sea',\n",
+       " '3 Archipelago Sea',\n",
+       " '4 Archipelago Sea',\n",
+       " '5 Archipelago Sea',\n",
+       " '6 Archipelago Sea',\n",
+       " '7 Archipelago Sea',\n",
+       " '8 Archipelago Sea',\n",
+       " '9 Archipelago Sea',\n",
+       " '10 Archipelago Sea',\n",
+       " '11 Archipelago Sea',\n",
+       " '1 Pyeongchang',\n",
+       " '2 Pyeongchang',\n",
+       " '3 Pyeongchang',\n",
+       " '4 Pyeongchang',\n",
+       " '5 Pyeongchang',\n",
+       " '6 Pyeongchang',\n",
+       " '7 Pyeongchang',\n",
+       " '8 Pyeongchang',\n",
+       " '9 Pyeongchang',\n",
+       " '10 Pyeongchang',\n",
+       " '11 Pyeongchang',\n",
+       " '1 Walla Walla Valley',\n",
+       " '2 Walla Walla Valley',\n",
+       " '3 Walla Walla Valley',\n",
+       " '4 Walla Walla Valley',\n",
+       " '5 Walla Walla Valley',\n",
+       " '6 Walla Walla Valley',\n",
+       " '7 Walla Walla Valley',\n",
+       " '8 Walla Walla Valley',\n",
+       " '9 Walla Walla Valley',\n",
+       " '10 Walla Walla Valley',\n",
+       " '11 Walla Walla Valley',\n",
+       " '1 Salina Island',\n",
+       " '2 Salina Island',\n",
+       " '3 Salina Island',\n",
+       " '4 Salina Island',\n",
+       " '5 Salina Island',\n",
+       " '6 Salina Island',\n",
+       " '7 Salina Island',\n",
+       " '8 Salina Island',\n",
+       " '9 Salina Island',\n",
+       " '10 Salina Island',\n",
+       " '11 Salina Island',\n",
+       " '1 Solta',\n",
+       " '2 Solta',\n",
+       " '3 Solta',\n",
+       " '4 Solta',\n",
+       " '5 Solta',\n",
+       " '6 Solta',\n",
+       " '7 Solta',\n",
+       " '8 Solta',\n",
+       " '9 Solta',\n",
+       " '10 Solta',\n",
+       " '11 Solta',\n",
+       " '1 Iguazu Falls',\n",
+       " '2 Iguazu Falls',\n",
+       " '3 Iguazu Falls',\n",
+       " '4 Iguazu Falls',\n",
+       " '5 Iguazu Falls',\n",
+       " '6 Iguazu Falls',\n",
+       " '7 Iguazu Falls',\n",
+       " '8 Iguazu Falls',\n",
+       " '9 Iguazu Falls',\n",
+       " '10 Iguazu Falls',\n",
+       " '11 Iguazu Falls']"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1293,7 +1293,7 @@
     "names_and_ranks = []\n",
     "for city in city_names:\n",
     "    for i in range(1, len(city_names)): \n",
-    "        names_and_ranks.append(str(i) + city)\n",
+    "        names_and_ranks.append(str(i) + \" \" + city)\n",
     "names_and_ranks"
    ]
   },
